tests/invalid/type/group_non_scalar.pts
list<int> group Bad {
  A = 1
}

function main() : void {}
